Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-3990

ep-engine crash in ep_engine.cc:2536 during replication in 1.7.0 GA build

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 1.7.1
    • 1.7.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • 1.7 GA

    Description

      attached the diags and logs

      INFO REPORT <5845.452.0> 2011-06-17 16:52:10
      ===============================================================================

      ns_log: logging ns_port_server:0:Port server memcached on node 'ns_1@10.32.62.220' exited with status 134. Restarting. Messages: Vbucket <1013> is going dead.
      Vbucket <1022> is going dead.
      memcached: ep_engine.cc:2356: bool EventuallyPersistentEngine::createTapQueue(const void*, std::string&, uint32_t, const void*, size_t): Assertion `nuserdata >= ((sizeof(uint16_t) + sizeof(uint64_t)) * nCheckpoints)' failed.

      ERROR REPORT <5845.452.0> 2011-06-17 16:52:10
      ===============================================================================

        • Generic server <5845.452.0> terminating
        • Last message in was {#Port<5845.2299>,
          Unknown macro: {exit_status,134}

          }

        • When Server state ==
          Unknown macro: {state,#Port<5845.2299>,memcached, {["memcached: ep_engine.cc:2356: bool EventuallyPersistentEngine::createTapQueue(const void*, std::string&, uint32_t, const void*, size_t): Assertion `nuserdata >= ((sizeof(uint16_t) + sizeof(uint64_t)) * nCheckpoints)' failed.", "Vbucket <1022> is going dead."], ["Vbucket <1013> is going dead."]}, undefined,[],0,true}
        • Reason for termination ==
        • {abnormal,134}

          CRASH REPORT <5845.452.0> 2011-06-17 16:52:10
          ===============================================================================
          Crashing process
          initial_call {ns_port_server,init,['Argument__1']}
          pid <5845.452.0>
          registered_name []
          error_info
          {exit,{abnormal,134}

          ,
          [

          {gen_server,terminate,6}

          ,

          {proc_lib,init_p_do_apply,3}

          ]}
          ancestors
          [<5845.451.0>,ns_port_sup,ns_server_sup,ns_server_cluster_sup,
          <5845.50.0>]
          messages [

          {'EXIT',#Port<5845.2299>,normal}

          ]
          links [<5845.451.0>]
          dictionary []
          trap_exit true
          status running
          heap_size 17711
          stack_size 24
          reductions 362163867

      Attachments

        1. membase.log
          1.19 MB
        2. ns_server-part1.zip
          9.84 MB
        3. ns_server-part2.zip
          4.36 MB
        4. stats.log
          316 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chiyoung Chiyoung Seo (Inactive)
            farshid Farshid Ghods (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty