MB-3990 Reject TAP connection request with incorrect parameters

Instead of assertion crash, we should simply reject any TAP
connection requests with incorrect parameters.

Change-Id: I546bb682d5e0dffdfcfb0c80bf329e6089bf464e
Reviewed-on: http://review.couchbase.org/7075
Reviewed-by: Bin Cui <bin.cui@gmail.com>
Tested-by: Chiyoung Seo <chiyoung.seo@gmail.com>